--- a/index.html
+++ b/index.html
@@ -37,39 +37,15 @@
 			touch-action: none;
 			-ms-touch-action: none;
 		}
-		input[type=button] {
-			background: #FFFFFF;
-			filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='[h2]FFFFFF', endColorstr='[/h2]DEDEDE');
-			background: -webkit-gradient(linear, left top, left bottom, from([h2]FFFFFF), to([/h2]DEDEDE));
-			background: -moz-linear-gradient(top,  [h2]FFFFFF,  [/h2]DEDEDE);
-			background: -ms-linear-gradient(top,  [h2]FFFFFF,  [/h2]DEDEDE);
-			background: -o-linear-gradient(top,  [h2]FFFFFF,  [/h2]DEDEDE);
-			color: #000;
-			border: 1px solid #666;
-			opacity: 0.80;
-			-ms-filter:"progid:DXImageTransform.Microsoft.Alpha"(Opacity=80);
-			-webkit-border-radius: 3px;
-			-moz-border-radius: 3px;
-			-o-border-radius: 3px;
-			-ms-border-radius: 3px;
-			border-radius: 3px;
-			padding: 5px;
+		input[type="button"]
+			position: absolute;
+			top: 409px;
+			left: 242px;
+			width: 92px; 
+			height: 41px;
 			font-size: 1em;
-			line-height: 0.8em;
 		}
-		input[type=button]:hover {
-			opacity: 1.0;
-			-ms-filter:"progid:DXImageTransform.Microsoft.Alpha"(Opacity=100);
-		}
-		input[type=button]:active {
-			background: #FFFFFF;
-			filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='[h2]DEDEDE', endColorstr='[/h2]FFFFFF');
-			background: -webkit-gradient(linear, left top, left bottom, from([h2]DEDEDE), to([/h2]FFFFFF));
-			background: -moz-linear-gradient(top,  [h2]DEDEDE,  [/h2]FFFFFF);
-			background: -ms-linear-gradient(top,  [h2]DEDEDE,  [/h2]FFFFFF);
-			background: -o-linear-gradient(top,  [h2]DEDEDE,  [/h2]FFFFFF);
-		}
-    </style>
+	</style>
 	
 
 </head> 
